--- a/kaguya/templates/base.html
+++ b/kaguya/templates/base.html
@@ -13,6 +13,7 @@
         <div>
             Himawari Community:
             <a href="{{ url_for('main.home') }}">Home</a>
+            <a href="{{ url_for('users.login') }}">Login</a>
         </div>
         <hr>
         {% block content %}{% endblock %}
