--- a/kaguya/templates/login.html
+++ b/kaguya/templates/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1>Sign In</h1>
-    <form action="" method="post" novalidate>
+    <form action="" method="POST" novalidate>
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}<br>
