--- a/kaguya/templates/base.html
+++ b/kaguya/templates/base.html
@@ -14,6 +14,7 @@
             Himawari Community:
             <a href="{{ url_for('main.home') }}">Home</a>
             <a href="{{ url_for('users.login') }}">Login</a>
+            <a href="{{ url_for('users.register') }}">Register Now</a>
         </div>
         <hr>
         {% block content %}{% endblock %}
