--- a/kaguya/templates/base.html
+++ b/kaguya/templates/base.html
@@ -37,12 +37,18 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
             </li>
+            {% if current_user.is_anonymous %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('users.login') }}">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('users.register') }}">Register</a>
             </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('users.logout') }}">Logout</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
       </div>
