--- a/kaguya/templates/login.html
+++ b/kaguya/templates/login.html
@@ -32,7 +32,7 @@
                 {{ form.hidden_tag() }}
 
                 <div class="form-label-group">
-                    {{ form.username(class="form-control", type="username", placeholder="Username") }}
+                    {{ form.username(class="form-control", type="text", placeholder="Username") }}
                     <label for="{{ form.username.id }}">Username</label>
                     {% for error in form.username.errors %}
                         <span style="color: red;">[{{ error }}]</span>
