--- a/kaguya/templates/base.html
+++ b/kaguya/templates/base.html
@@ -46,6 +46,9 @@
             </li>
             {% else %}
             <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('users.account') }}">My Account</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('users.logout') }}">Logout</a>
             </li>
             {% endif %}
