--- a/kaguya/templates/base.html
+++ b/kaguya/templates/base.html
@@ -59,11 +59,20 @@
 
     <!-- Main Content -->
     <main role="main" class="container">
-        <div class="row">
-            <div class="col-md-12">
-                {% block content %}{% endblock %}
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+          {% block content %}{% endblock %}
         </div>
+      </div>
     </main>
 
     <!-- Footer -->
