basic carousel to homepage

--- a/kaguya/templates/anime.html
+++ b/kaguya/templates/anime.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row">
         <!--sidebar-->
-        <div class="col-lg-3">
+        <div class="col-md-3">
             <img class="img-responsive" src="https://cdn.myanimelist.net/images/anime/1764/106659.jpg" style="padding-bottom: 15px" width="100%">
             <h6 style="padding-top: 10px">Alternative Titles</h6>
             <p style="text-align:left; font-size:12px">
@@ -57,7 +57,7 @@
             <hr>
         </div>
         <!--content-->
-        <div class="col-lg-9">
+        <div class="col-md-9">
             <h4 style="padding-bottom: 20px">Kaguya-sama wa Kokurasetai?: Tensai-tachi no Renai Zunousen</h4>
             <button type="button" class="btn btn-dark btn-sm" style="font-size: 0.8em">Comedy</button>
             <button type="button" class="btn btn-dark btn-sm" style="font-size: 0.8em">Psychological</button>
