--- a/kaguya/templates/base.html
+++ b/kaguya/templates/base.html
@@ -22,15 +22,20 @@
     {% endif %}
 </head>
 
-<body> 
+<body style="background: rgb(255, 255, 255);
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 1.0)), url('https://static.zerochan.net/Kazami.Yuuka.full.1287759.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;">
 <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="{{ url_for('main.home') }}">Kaguya Net</a>
+        <div class="container">
+        <a class="navbar-brand" href="{{ url_for('main.home') }}" style="padding-right:30px">Kaguya Net</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="{{ url_for('main.home') }}">
                   <i class="fa fa-home" aria-hidden="true"></i> Home
@@ -66,15 +71,18 @@
             </li>
             {% endif %}
 
+
+          </ul>
             <form class="form-inline">
                 <input class="form-control-sm mr-sm-2" type="search" placeholder="Search Anime" aria-label="Search">
                 <button class="btn btn-dark btn-sm" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
             </form>
-          </ul>
+        </div>
         </div>
     </nav>
 
     <!-- Main Content -->
+
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
@@ -91,6 +99,7 @@
         </div>
       </div>
     </main>
+
 
     <!-- Footer -->
     <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
