--- a/kaguya/templates/home.html
+++ b/kaguya/templates/home.html
@@ -1,12 +1,45 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="row">
     <h1>Welcome to Himawari!</h1>
-        <!---To fill in--->
-    <h2>Current Seasonal Anime</h2>
-        <!---To fill in--->
-    <h2>Popular Anime</h2>
-        <!---To fill in--->
-    <h2>Top Upcoming Anime</h2>
-        <!---To fill in--->
+    <!---To fill in--->
+
+</div>
+
+<h2>Current Seasonal Anime</h2>
+<div class="row">
+    <div class="col-md-3">
+            <div id="carouselInterval" class="carousel slide carousel-fade" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="2000">
+                  <img src="https://cdn.myanimelist.net/images/anime/13/17405.jpg" class="d-block w-10" >
+                </div>
+                <div class="carousel-item" data-interval="2000">
+                  <img src="https://cdn.myanimelist.net/images/anime/2/75259.jpg" class="d-block w-10" >
+                </div>
+                <div class="carousel-item" data-interval="2000">
+                  <img src="https://cdn.myanimelist.net/images/anime/10/8380.jpg" class="d-block w-10" >
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselInterval" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselInterval" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+    </div>
+    <div class="col-md-9">
+        PLACEHOLDER STUFF HERE
+    </div>
+</div>
+
+<h2>Popular Anime</h2>
+    <!---To fill in--->
+<h2>Top Upcoming Anime</h2>
+    <!---To fill in--->
+
 {% endblock %}
