--- a/kaguya/templates/anime.html
+++ b/kaguya/templates/anime.html
@@ -6,7 +6,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="row">&nbsp;</div>
 <div class="container">
+
     <div class="row">
         <!--sidebar-->
         <div class="col-md-3">
