--- a/kaguya/static/home.css
+++ b/kaguya/static/home.css
@@ -1,11 +1,11 @@
 .carousel-inner > .carousel-item > .col-xs-3 > img {
-  height: 240px;
+  height: 250px;
   padding: 0px;
   margin: auto;
 }
 
 .carousel-inner > .carousel-item {
-   height: 300px;
+   height: 310px;
 }
 
 .col-md-3{
@@ -23,7 +23,7 @@ body .carousel-indicators li{
   border-radius: 100%;
 }
 body .carousel-indicators{
-  bottom: -20px;
+  bottom: -10px;
 }
 
 body .no-padding{
@@ -34,6 +34,9 @@ body .no-padding{
 .carousel-control-next,
 .carousel-control-prev {
     filter: invert(100%);
+    height: 80%;
+    top: 33%;
+    width: 86px;
 }
 
 .carousel-control-prev {
@@ -45,5 +48,29 @@ body .no-padding{
 }
 
 .flex-fixed-width-item {
-    flex: 0 0 750px;
+    flex: 0 0 820px;
+}
+
+body .jumbotron {
+    margin-bottom: 0px;
+    position: relative;
+    background: none;
+  }
+
+.jumbotron .bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("https://static.zerochan.net/Kazami.Yuuka.full.1287759.jpg");
+    background-position: 0% 25%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+     -o-filter: blur(5px);
+     -ms-filter: blur(5px);
+     filter: blur(5px);
+     z-index: -1;
 }
