--- a/kaguya/templates/base.html
+++ b/kaguya/templates/base.html
@@ -22,13 +22,9 @@
     {% endif %}
 </head>
 
-<body style="background: rgb(255, 255, 255);
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 1.0)), url('https://static.zerochan.net/Kazami.Yuuka.full.1287759.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;">
+<body>
 <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top pb-3">
         <div class="container">
         <a class="navbar-brand" href="{{ url_for('main.home') }}" style="padding-right:30px">Kaguya Net</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,9 +67,8 @@
             </li>
             {% endif %}
 
-
           </ul>
-            <form class="form-inline">
+            <form class="form-inline" style="margin-top: 10px">
                 <input class="form-control-sm mr-sm-2" type="search" placeholder="Search Anime" aria-label="Search">
                 <button class="btn btn-dark btn-sm" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
             </form>
@@ -83,7 +78,7 @@
 
     <!-- Main Content -->
 
-    <main role="main" class="container">
+    <main role="main" >
       <div class="row">
         <div class="col-md-12">
           {% with messages = get_flashed_messages(with_categories=true) %}
