--- a/kaguya/static/home.css
+++ b/kaguya/static/home.css
@@ -1,11 +1,13 @@
 .carousel-inner > .carousel-item > .col-xs-3 > img {
-  height: 250px;
+  height: 80%;
+  width: 90%;
   padding: 0px;
   margin: auto;
+  border-radius: 5%;
 }
 
 .carousel-inner > .carousel-item {
-   height: 310px;
+   height: 33vh;
 }
 
 .col-md-3{
@@ -23,7 +25,7 @@ body .carousel-indicators li{
   border-radius: 100%;
 }
 body .carousel-indicators{
-  bottom: -10px;
+  bottom: -5%;
 }
 
 body .no-padding{
@@ -40,15 +42,11 @@ body .no-padding{
 }
 
 .carousel-control-prev {
-  margin-left: -60px;
+  margin-left: -90px;
 }
 
 .carousel-control-next {
   margin-right: -60px;
-}
-
-.flex-fixed-width-item {
-    flex: 0 0 820px;
 }
 
 body .jumbotron {
@@ -73,4 +71,33 @@ body .jumbotron {
      -ms-filter: blur(5px);
      filter: blur(5px);
      z-index: -1;
+}
+
+html {
+  --lh: 1.4rem;
+  line-height: var(--lh);
+}
+.overflow {
+  --max-lines: 3;
+  position: relative;
+  max-height: calc(var(--lh) * var(--max-lines));
+  overflow: hidden;
+  padding-right: 1rem; /* space for ellipsis */
+}
+.overflow::before {
+  position: absolute;
+  content: "...";
+/*   inset-block-end: 0;
+  inset-inline-end: 0; */
+  bottom: -5;
+  right: 2;
+}
+.overflow::after {
+  content: "";
+  position: absolute;
+/*   inset-inline-end: 0; */
+  right: 0;
+  width: 1rem;
+  height: 1rem;
+  background: white;
 }
