minor icon addition, page formatting

--- a/kaguya/templates/home.html
+++ b/kaguya/templates/home.html
@@ -297,7 +297,7 @@
     <div class="container-fluid"
     <!--USER REVIEWS-->
     <div class="card mt-4">
-      <h5 class="card-header"> Latest User Reviews </h5>
+      <h5 class="card-header"><i class="fa fa-comment" aria-hidden="true"></i> Latest Reviews </h5>
 <!--      <div class="card-body">-->
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
@@ -340,15 +340,10 @@
             </div>
           </li>
         </ul>
-<!--        <p class="card-text">-->
-<!--          example text of review-->
-<!--        </p>-->
         <a href="#" class="btn btn-dark btn-block btn-sm">More Reviews</a>
-<!--      </div>-->
     </div>
     </div>
   </div>
-
   <div class="col-md-1"></div>
 </div>
 
